issue 20: Điều chỉnh API
API Xử lý sự cố của trụ sở đổi tên dễ quản lý